--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
 
 
 <body>
+
+    <!--First part of the header-->
+
+ <div class="logo-header">
+
+        <div id="kitty-logo"> <img src="/creamcat.jpg" width="70px"  height="70px">  </div>
+        <div id="company-name"> <b>Premium Chow <br>  Pet Nutrition </b> </div>
+        <div id="search-box"> <input type="text" placeholder="SEARCH...">  </div>
+
+    <!--Navigation Bar-->
+
+<nav class="nav-bar">
+
+<a href="https://www.earthbornholisticpetfood.com/"  id="shop-link">SHOP</a>
+<a href="https://nanp.org/what-is-holistic-nutrition/"  id="nutrition-link">HOLISTIC NUTRITION</a>
+<a href="https://nanp.org/what-is-holistic-nutrition/"  id="ourstory-link">OUR STORY</a>
+<a href="https://www.google.com/maps/@42.8310528,-73.9016704,13z"  id="stockists-link">STOCKISTS</a>
+<a href="https://www.google.com/maps/@42.8310528,-73.9016704,13z"  id="blog-link">BLOG</a>
+
+</nav>
+
+</div>   
+
+</body>
+
     
 </body>
 </html>
