--- a/index.html
+++ b/index.html
@@ -29,12 +29,50 @@
 <a href="https://www.google.com/maps/@42.8310528,-73.9016704,13z"  id="stockists-link">STOCKISTS</a>
 <a href="https://www.google.com/maps/@42.8310528,-73.9016704,13z"  id="blog-link">BLOG</a>
 
-</nav>
+</nav> </div> 
 
-</div>   
+<!--Flex boxes and divs-->
+
+<div class="first-div">
+
+    <div> <img src="/chicken.jpg"  width="150px"  height="150px">  </div>
+    <div> <img src="/fish.jpg"   width="150px"  height="150px">  </div>
+    <div> <img src="/carrot.jpg"  width="150px"  height="150px"> </div>
+    <div> <img src="/sweetpea.jpg"  width="150px"  height="150px"> </div>
+    <div> <img src="/brownegg.jpg"  width="150px"  height="150px"> </div> 
+</div>
+
+
+<div class="second-div">  
+
+    
+    <p>  <span style="font-size: 70px;"> Organic <br> Dog & Cat <br> Nutrition </span> <br> <br>
+
+     <span style="font-size: 20px;"> Maximising your pet's quality <br> <br> of life and happiness 
+    </span> </p> 
+
+</div>
+
+
+<div class="third-div" >
+
+    <div> <img src="/chicken.jpg"  width="150px"  height="150px">  </div>
+    <div> <img src="/fish.jpg"   width="150px"  height="150px">  </div>
+    <div> <img src="/carrot.jpg"  width="150px"  height="150px"> </div>
+    <div> <img src="/sweetpea.jpg"  width="150px"  height="150px"> </div>
+    <div> <img src="/brownegg.jpg"  width="150px"  height="150px"> </div> 
+
+
+</div>
+
+
+
+
+
+
 
 </body>
 
     
-</body>
+
 </html>
